--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,33 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #444;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main.container {
+  background-color: #FFFFFF;
+  margin: 0 auto;
+  padding: 2em 2em 7em;
+  max-width: 990px;
+}
+
+.field {
+  margin: 10px;
+}
+
+.error-text {
+  color: #9f3a38;
+}
+#game-launch iframe {
+  width: 100%;
+  height: 480px;
+}
+@media only screen and (max-width: 767px) {
+  .categories {
+    order: -1;
+  }
+  #game-launch iframe {
+    width: 100%;
+    height: 100%;
+  }
 }
